[package]
name = "bft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bft_type = { path = "./bft_type" }
bft_interp = { path = "./bft_interp" }



[workspace]
members = [
  "bft_type",
  "bft_interp",
]
